--- a/nft-preview.css
+++ b/nft-preview.css
@@ -114,8 +114,9 @@
 }
 
 .nft-icon {
-    vertical-align: middle;
-    margin-right: 10px;
+    position: relative;
+    top: 2px;
+    margin-right: 5px;
 }
 
 .nft-author-icon {
